2006-06-21  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.jacks/jacks.xfail: Updated for ecj.

2006-06-20  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.compile/Where.xfail: Now 'no-link'.

2006-06-19  Tom Tromey  <tromey@redhat.com>

	* gnu/java/lang/natMainThread.cc (call_main): Link main class.

2006-06-19  Tom Tromey  <tromey@redhat.com>

	* testsuite/lib/libjava.exp (test_libjava): Don't compile via
	bytecode.  Run BC compilations from source.

2006-06-19  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/TestProxy.java: Don't use wildcard
	imports for java.lang.reflect.

2006-06-13  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/stringconst.xfail: Removed.
	* testsuite/libjava.lang/ArrayStore2.xfail: Removed.

2006-06-08  Tom Tromey  <tromey@redhat.com>

	* sources.am, Makefile.in: Rebuilt.
	* Makefile.am (libgcj_la_LIBADD): Add Object.lo and Class.lo.
	(java/lang/Object.lo): New target.
	(java/lang/Class.lo): Likewise.
	* scripts/makemake.tcl (emit_package_rule): Add special case for
	Object and Class.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (gcj_dbtool_DEPENDENCIES): Add gcj_dbtool.lo.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (nat_headers): Don't list Main.h.
	(generic_header_files): Likewise.

2006-06-05  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.loader/TestLeak.java (MyLoader): Now static.
	* testsuite/libjava.jacks/jacks.exp (gcj_jacks_write): Use -w.
	* testsuite/lib/libjava.exp (libjava_arguments): Add -w.
	* testsuite/libjava.compile/G19990210_2.java: Removed.
	* testsuite/libjava.compile/PR208.java: Removed.
	* testsuite/libjava.compile/PR208.xfail: Removed.
	* testsuite/libjava.compile/support/Case.java: Removed.
	* testsuite/libjava.compile/Case.java: Removed.

2006-06-04  Tom Tromey  <tromey@redhat.com>

	* sources.am, Makefile.in: Rebuilt.
	* Makefile.am (gcj_dbtool_LDADD): Add
	gnu-gcj-tools-gcj_dbtool.lo.